overflow x no longer
once apply twice remove

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,9 @@ html {
   color: var(--color-text);
   background-color: var(--color-background);
   /* background-image: linear-gradient(rgba(148, 227, 255, 0.724), rgba(138, 138, 235, 0.524)); */
-  overflow-x: hidden;
+  overflow-y: visible;
+  /* overflow-x: hidden; */
+
 }
 
 body {
